; ModuleID = '/home/carl/AnghaBench/esp-idf/examples/bluetooth/bluedroid/coex/a2dp_gatts_coex/main/extr_bt_app_av.c_bt_app_rc_tg_cb.c'
source_filename = "/home/carl/AnghaBench/esp-idf/examples/bluetooth/bluedroid/coex/a2dp_gatts_coex/main/extr_bt_app_av.c_bt_app_rc_tg_cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@bt_av_hdl_avrc_tg_evt = common dso_local global i32 0, align 4
@BT_RC_TG_TAG = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [23 x i8] c"Invalid AVRC event: %d\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @bt_app_rc_tg_cb(i32 %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  store i32 %0, i32* %3, align 4
  store i32* %1, i32** %4, align 8
  %5 = load i32, i32* %3, align 4
  switch i32 %5, label %11 [
    i32 132, label %6
    i32 129, label %6
    i32 131, label %6
    i32 128, label %6
    i32 130, label %6
  ]

6:                                                ; preds = %2, %2, %2, %2, %2
  %7 = load i32, i32* @bt_av_hdl_avrc_tg_evt, align 4
  %8 = load i32, i32* %3, align 4
  %9 = load i32*, i32** %4, align 8
  %10 = call i32 @bt_app_work_dispatch(i32 %7, i32 %8, i32* %9, i32 4, i32* null)
  br label %15

11:                                               ; preds = %2
  %12 = load i32, i32* @BT_RC_TG_TAG, align 4
  %13 = load i32, i32* %3, align 4
  %14 = call i32 @ESP_LOGE(i32 %12, i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0), i32 %13)
  br label %15

15:                                               ; preds = %11, %6
  ret void
}

declare dso_local i32 @bt_app_work_dispatch(i32, i32, i32*, i32, i32*) #1

declare dso_local i32 @ESP_LOGE(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
